perf: add leagues table markup

--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -1,12 +1,11 @@
 .appFooter {
-    position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 6vh;
+    min-height: 7vh;
     font-size: 2rem;
     font-weight: 100;
     color: #fff;
