--- a/src/css/Teams.scss
+++ b/src/css/Teams.scss
@@ -85,6 +85,7 @@ $shadow: 0 2px 3px #616161;
 
         .teamName {
             text-decoration: underline;
+            color: #000;
             font-size: 2.5rem;
         }
         .teamShortName {
