--- a/src/css/Teams.scss
+++ b/src/css/Teams.scss
@@ -86,7 +86,11 @@ $shadow: 0 2px 3px #616161;
     background-color: $gray-color;
 
     .crestImg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         height: 11vh;
+        width: 11vh;
         margin: 0 5%;
 
         img {
@@ -110,8 +114,12 @@ $shadow: 0 2px 3px #616161;
         }
     }
 
-    .addToFavorite:hover {
-        cursor: pointer;
+    .addToFavorite {
+        width: 180px;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
