--- a/src/css/_colorAndFont.scss
+++ b/src/css/_colorAndFont.scss
@@ -1,2 +1,4 @@
-$main-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600');
+
+$main-font: 'Josefin Sans', sans-serif;
 $main-color: #568b33;
