--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
+@import './colorAndFont';
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -51,7 +53,7 @@ select {
     background-image: none;
 }
 html {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: $main-font;
 	font-size: 10px;
 }
 main {
@@ -60,6 +62,9 @@ main {
 	margin: 0 auto;
 	padding: 3% 0;
 	box-sizing: border-box;
+}
+button {
+	font-family: $main-font;
 }
 
 @media (max-width: 425px) {
