Teams page functionality (#4)

--- a/src/css/Teams.scss
+++ b/src/css/Teams.scss
@@ -40,6 +40,11 @@ $shadow: 0 2px 3px #616161;
         font-size: 13px;
         color: #000;
         cursor: pointer;
+
+        &:disabled {
+            color: rgb(187, 187, 187);
+            cursor: default;
+        }
     }
 
     &::after {
@@ -86,7 +91,11 @@ $shadow: 0 2px 3px #616161;
     background-color: $gray-color;
 
     .crestImg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         height: 11vh;
+        width: 11vh;
         margin: 0 5%;
 
         img {
@@ -110,8 +119,12 @@ $shadow: 0 2px 3px #616161;
         }
     }
 
-    .addToFavorite:hover {
-        cursor: pointer;
+    .addToFavorite {
+        width: 180px;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
