--- a/src/css/OneTeam.scss
+++ b/src/css/OneTeam.scss
@@ -194,6 +194,11 @@ $shadow: 0 2px 3px #616161;
         justify-content: space-between;
         font-weight: 400;
         font-size: 2.5rem;
+
+        span {
+            min-width: 10%;
+            text-align: center;
+        }
     }
     .fixturesItemDate {
         font-weight: 300;
