--- a/src/css/Team.scss
+++ b/src/css/Team.scss
@@ -3,13 +3,13 @@
 $gray-color: #dadada;
 $shadow: 0 2px 3px #616161;
 
-.oneTeamHeader {
+.TeamHeader {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-.oneTeamSection .teamsList {
+.TeamSection .teamsList {
     display: inline-block;
     width: 49%;
 
@@ -18,7 +18,7 @@ $shadow: 0 2px 3px #616161;
     }
 }
 
-.oneTeamControlls {
+.TeamControlls {
     width: 49%;
     margin: 10px 0;
 
@@ -53,7 +53,7 @@ $shadow: 0 2px 3px #616161;
     }
 }
 
-.oneTeamContent {
+.TeamContent {
     display: flex;
     justify-content: space-between;
 }
@@ -232,20 +232,20 @@ $shadow: 0 2px 3px #616161;
 }
 
 @media (max-width: 1023px) {
-    .oneTeamSection .teamsList {
+    .TeamSection .teamsList {
         width: 90%;
     }
-    .oneTeamHeader {
+    .TeamHeader {
         flex-direction: column;
         align-items: center;
     }
 
-    .oneTeamControlls {
+    .TeamControlls {
         display: flex;
         justify-content: center;
         width: 90%;
     }
-    .oneTeamControlls .teamControll {
+    .TeamControlls .teamControll {
         height: 4vmax;
     }
     .pagination {
@@ -254,7 +254,7 @@ $shadow: 0 2px 3px #616161;
             line-height: 5vmax;
         }
     }
-    .oneTeamContent {
+    .TeamContent {
         flex-direction: column;
         align-items: center;
     }
