feat: add homepage base

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -13,6 +13,10 @@
         box-sizing: content-box;
         font-size: 4rem;
         color: #FFF;
+
+        .logo {
+            color: inherit;
+        }
     }
 }
 
