--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -64,6 +64,18 @@ main {
 	padding: 3% 0;
 	box-sizing: border-box;
 }
+.homePage {
+	position: absolute;
+	left: 0;
+	top: 7vh;
+	width: 100%;
+	min-height: 86vh;
+	box-sizing: border-box;
+	box-shadow: inset 0 30px 20px -15px $main-color, inset 0 -30px 20px -15px $main-color;
+	background-image: url('https://i.pinimg.com/originals/d3/7c/2a/d37c2a46ace3ca442597edd73f3adb8f.jpg');
+	background-position: center;
+	background-size: cover;
+}
 button {
 	font-family: $main-font;
 }
