feat: add homepage

--- a/src/css/TableStandings.scss
+++ b/src/css/TableStandings.scss
@@ -1,5 +1,9 @@
 @import './colorAndFont';
 
+.tableLeague {
+    padding: 5% 0;
+}
+
 .tableTabs {
     display: flex;
     justify-content: space-between;
