--- a/src/css/Teams.scss
+++ b/src/css/Teams.scss
@@ -3,6 +3,10 @@
 $gray-color: #dadada;
 $shadow: 0 2px 3px #616161;
 
+.teamsSection {
+    padding: 5% 0;
+}
+
 .teamsHeader {
     display: flex;
     align-items: center;
