--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -1,13 +1,31 @@
 .appFooter {
     bottom: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 3%;
+    box-sizing: border-box;
     width: 100%;
     min-height: 7vh;
     font-size: 2rem;
     font-weight: 100;
     color: #fff;
     background-color: #568b33;
+}
+
+.devInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+.languages li {
+    display: inline;
+    &:not(:first-child)::before {
+        content: '|';
+    }
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
